@@ -362,6 +362,8 @@ Version 1.5.1 -- CVS
     508 or WAI fixes. Original idea and patch by dugan <at> passwall.com.
   - Fixed broken attachments caused by inconsistency of PHP chunk_split().
     Thanks to Roalt Zijlstra.
+  - Identity code was not checking for domain part in username before setting
+    email address (Bug #1219184).
 
 
 Version 1.5.0 - 2 February 2004
